--- a/index.html
+++ b/index.html
@@ -31,4 +31,11 @@
         document.getElementById("paragraph").innerHTML=err.message
     }
 </script>
+<p id="something"></p>
+<script>
+    //array function
+    add=(a,b)=>a+b
+
+    document.getElementById("something").innerHTML=add(7,6)
+</script>
 </body>
